--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "restaurant-midterm",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
+  "main": "./bin/www",
+  "engines": {
+    "node": "12.x"
   },
+  "scripts": {
+    "start": "node ./bin/www",
+    "test": "echo \"No text setup\" && exit 1"
+  },
+  "keywords": [
+    "nodejs",
+    "html",
+    "heroku"
+  ],
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
